some bad user experience fixed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2 class="text-center text-success">Search Your Favourite Food.</h2>
     <div class="input-group mb-3 w-50 mx-auto">
         <input id="search-field" type="text" class="form-control" placeholder="Search the food you eat"
-            aria-label="Recipient's username" aria-describedby="button-addon2">
+            aria-label="Recipient's username" aria-describedby="button-addon2" onfocus="removeValue()">
         <button class="btn btn-outline-secondary" type="button" id="button-search"
             onclick="searchFood()">Search</button>
     </div>
