--- a/index.html
+++ b/index.html
@@ -16,13 +16,18 @@
             display: grid;
             grid-template-columns: repeat(1, 1fr);
         }
+
+        .header-warning {
+            font-size: 14px;
+        }
     </style>
 </head>
 
 <body class="bg-gray">
     <!-- Search Input -->
     <h2 class="text-center text-success">Jayeen's recipe store</h2>
-    <h6 class="text-center text-danger">To see your desired recipe click on any of the search results.</h6>
+    <h6 class="text-center text-danger header-warning">To see your desired recipe click on any of the search results.
+    </h6>
     <div class="input-group mb-3 w-75 mx-auto">
         <input id="search-field" type="text" class="form-control" placeholder="Search the food you eat"
             aria-label="Recipient's username" aria-describedby="button-addon2" onfocus="removeValueAndError()">
