--- a/index.html
+++ b/index.html
@@ -42,32 +42,40 @@
 </head>
 
 <body class="bg-gray">
-    <!-- Search Input -->
-    <h2 class="text-center text-success">Jayeen's recipe store</h2>
-    <h6 class="text-center text-danger header-warning">To see your desired recipe click on any of the search results.
-    </h6>
-    <div class="input-group mb-3 mx-auto search-box">
-        <input id="search-field" type="text" class="form-control" placeholder="Search the food you eat"
-            aria-label="Recipient's username" aria-describedby="button-addon2" onfocus="removeValueAndError()">
-        <button class="btn btn-outline-secondary" type="button" id="button-search"
-            onclick="searchFood()">Search</button>
-    </div>
-    <!-- Meal Details -->
-    <div id="meal-details" style="display: none;">
-        <div class="card-container">
-            <div class="card border border-danger">
-                <img id="meal-image" class="img-fluid rounded-start">
-                <div class="card-body">
-                    <h5 id="meal-head" class="card-title"></h5>
-                    <p id="meal-detail" class="card-text"></p>
-                    <a id="youtube-btn" class="btn btn-danger rounded p-2">Watch On YouTube</a>
+    <header>
+        <h2 class="text-center text-success">Jayeen's recipe store</h2>
+    </header>
+    <main>
+        <h6 class="text-center text-danger header-warning">To see your desired recipe click on any of the search
+            results.
+        </h6>
+        <div class="input-group mb-3 mx-auto search-box">
+            <!-- Search Input -->
+            <input id="search-field" type="text" class="form-control" placeholder="Search the food you eat"
+                aria-label="Recipient's username" aria-describedby="button-addon2" onfocus="removeValueAndError()">
+            <button class="btn btn-outline-secondary" type="button" id="button-search"
+                onclick="searchFood()">Search</button>
+        </div>
+        <!-- Meal Details -->
+        <div id="meal-details" style="display: none;">
+            <div class="card-container">
+                <div class="card border border-danger">
+                    <img id="meal-image" class="img-fluid rounded-start">
+                    <div class="card-body">
+                        <h5 id="meal-head" class="card-title"></h5>
+                        <p id="meal-detail" class="card-text"></p>
+                        <a id="youtube-btn" class="btn btn-danger rounded p-2">Watch On YouTube</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Search Result -->
-    <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4 w-90 p-4 mx-auto">
-    </div>
+        <!-- Search Result -->
+        <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4 w-90 p-4 mx-auto">
+        </div>
+    </main>
+    <footer id="footer" class="d-none bg-danger">
+        <p class="text-white text-center m-0 pt-2 pb-2">Developed by MD. Jayeen Bin Alam</p>
+    </footer>
     <script src="js/app.js"></script>
 </body>
 
