--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
             width: 75%;
         }
 
+        footer#footer {
+            position: fixed;
+            left: 0;
+            right: 0;
+            bottom: 0;
+        }
+
         @media only screen and (min-width:600px) {
             .card-container {
                 width: 40%;
