search input placeholder text changed

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </h6>
         <div class="input-group mb-3 mx-auto search-box">
             <!-- Search Input -->
-            <input id="search-field" type="text" class="form-control" placeholder="Search the food you eat"
+            <input id="search-field" type="text" class="form-control" placeholder="Search your desired food"
                 aria-label="Recipient's username" aria-describedby="button-addon2" onfocus="removeValueAndError()">
             <button class="btn btn-outline-secondary" type="button" id="button-search"
                 onclick="searchFood()">Search</button>
